--- a/ll/index.html
+++ b/ll/index.html
@@ -700,7 +700,7 @@ function showVideo() {
     complete: function(){  
     setTimeout(function(){
     $("#process1").fadeOut();
-    location.href='tg27.html';
+    location.href='lg1.html';
     }, 200);}});};
 </script>
 
